<resources>
    <string name="app_name">MenuFragmentCurso</string>

    <string name="navigation_drawer_open">Abrir Navegacion</string>
    <string name="navigation_drawer_close">Cerrar Navegacion</string>
    <string name="menu_camera">Camara</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_manage">Configuracion</string>
    <string name="menu_grupo">Grupo</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Enviar</string>
    <string name="homeFragment">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregarEmpleado">Agregar Empleado</string>


</resources>